Flicker Fix

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -75,6 +75,7 @@ main.text {
                 transform-style: preserve-3d;
                 transform: perspective(1000px);
                 .frontend {
+                    display: block;
                     position: relative;
                     backface-visibility: hidden;
                 }
